# featclus

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: cd.yaml  ci.yaml
bash/: testing.sh
src/featclus/: __init__.py  data_processing.py  featclus.py  model.py  parallelizer.py  plots.py
tests/: conftest.py  test_model.py
