[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "featclus"
version = "0.1.3"
description = "This library is built to perform feature selection in clustering models"
readme = "README.md"
authors = [{ name = "Sebastian Sarasti", email = "sebitas.alejo@hotmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["Unsupervised Learning", "Machine Learning", "Clustering"]
dependencies = [
    "numpy==2.1.2",
    "pandas==2.2.3",
    "scikit-learn==1.5.2",
    "pytest==8.3.3", 
    "plotly==5.24.1", 
    "nbformat==5.10.4",
    "gower==0.1.2"
]
requires-python = ">=3.12.4"

[project.urls]
Homepage = "https://github.com/sebassaras02/featclus"
